Tue Jan 11 20:24:36 CET 2005 (tk)
---------------------------------
  * docs: Fix small typos in man pages (reported by Luca)

Tue Jan 11 02:27:24 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: Fix possible crash when handling file information in
			  corrupted zip archives (problem reported by
			  Reinhard Max <max*suse.de>)

Sun Jan  9 21:24:58 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Some HTML.Phishing.Bank-41 were getting through

Sun Jan  9 11:38:39 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Add support for messages that break RFC2047

Sat Jan  8 03:50:51 CET 2005 (tk)
---------------------------------
  * aclocal.m4/configure: Add support for x86_64 (patch by Gwenole Beauchesne
			  (MandrakeSoft), submitted by Oden Eriksson
			  <oeriksson*mandrakesoft.com>)

Sat Jan  8 02:53:20 CET 2005 (tk)
---------------------------------
  * libclamav/filetypes.c: Add support for mail files parsed by CMU Sieve
			   (samples provided by Stefan Kaltenbrunner
			   <stefan*kaltenbrunner.cc>)

Sat Jan  8 02:25:58 CET 2005 (tk)
---------------------------------
  * libclamav: Fix cli_writeint32 alignment problem on SPARC (reported by
	       Andy Fiddaman <clam*fiddaman.net>)

Fri Jan  7 13:50:52 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix to "content-type: application" which could cause
				the attachment to be scanned twice

Thu Jan  6 23:24:35 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handler of single quotes in headers

Thu Jan  6 11:54:54 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan for bounces in non mime-encoded emails

Wed Jan  5 21:55:49 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Guess incorrect content-type, e.g.
			Content-Type: ultipart/mixed
				instead of
			Content-Type: multipart/mixed

Wed Jan  5 21:09:14 GMT 2005 (njh)